* #145 ObjectInspector sometimes reselects wrong item (patch by sodev).
* #146 Fixed codegeneration to use the static box of a wxStaticBoxSizer as parent for its children (patch by sodev).
* #153 Incorrect generated python eventbinding code.
* #7 get wxformbuilder to build on Mac OS X.
+ #61 wxDataViewCtrlColumn support.
* Partial fix of #131 wxStaticBoxSizer highlighting issues.

05/06/2014 Version 3.05.00 (Beta)
+ Added support for wxRibbonBar and related classes.
+ Added support for wxDataViewCtrl and derived classes.
+ Added abbility to define property grid's/manager's content.
+ Re-arranged widgets palettes.
* #140 GUI dont work after some controls added
^ Property names used in code templates may be encapsulated by curly brackets (e.g. ${name})
  so they can be surrounded by the template's content without any extra white spaces now.
* #112 Using wxListbook under MSW causes assertion on startup

04/13/2014 Version 3.04.03 (Beta)
* Both wxToolBar and wxAuiToolBar now use GetId() function member of their tools to handle
  ID assigned to the tools automatically.
+ The object inspector now remembers name of the last modified property and tries to select it
  again when active widget is changed (patch by tuyanyi).
* #138 Wrong Icons in GUI.
* #137 XRC generation uses class "unknown" for search control.
* #136 AUI pane captions dont get marked for translation.

01/24/2014 Version 3.04.02 (Beta)
* #126 wxWidgets > 2.8 compile fix (patch by sodev).
* #127 Wrong parent passed to IComponent::OnCreated() (patch by sodev).
* #128 Object Inspector expansion fix (patch by sodev).
* #129 Support for statusbar plugins (patch by sodev).
* Avoid flickering on MS Windows.
+ Added abbility to swap the editor and the object properties panels (patch by tuyanyi).

11/12/2013 Version 3.04.01 (Beta)
* Fixed build error with wxWidgets 3.0.0.
^ Removed borders from designer frame/dialog/panel when built with wxWidgets 2.9 or later
  under wxGTK.

05/10/2013 Version 3.04.00 (Beta)